Add product traceability and user stats
